--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,14 @@
 -->
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Paper Dashboard PRO Angular by Creative Tim</title>
+    <title>Angrez The Salon</title>
 
     <base href="/">
 
@@ -32,6 +33,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
+
 <body>
     <app-root>
         <div class="loader-container">
@@ -42,4 +44,5 @@
 <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
 <script src="https://www.amcharts.com/lib/3/serial.js"></script>
 <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+
 </html>
