--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Angrez The Salon</title>
+    <title>Salon Management System</title>
 
     <base href="/">
 
